--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,13 @@
 	height: 200px;
 	width: 80%;
 }
+
+#overlay {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 500; 
+	width: 100%;
+	height: 100%;
+	background: #FFFFFF; opacity: 0.0;
+}
