--- a/style/style.css
+++ b/style/style.css
@@ -21,5 +21,13 @@
 	z-index: 500; 
 	width: 100%;
 	height: 100%;
-	background: #FFFFFF; opacity: 0.0;
+	background: #FFFFFF;
+	opacity: 0.0;
+	filter:alpha(opacity=0); 
+	-moz-opacity: 0.0;
+	
+	-moz-user-select:none;
+	-webkit-user-select:none;
+	user-select:none;
+	-ms-user-select:none; 
 }
